<resources>
    <string name="app_name">Gestión de productos</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_crear">Crear usuarios</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Nombre">Nombre</string>
    <string name="Apellidos">Apellidos</string>
    <string name="Email">Email</string>
    <string name="Contrasenya">Contraseña</string>
    <string name="ConfirmarContrasenya">Confirmar contraseña</string>
    <string name="CreacionDeUsuario">Creación de usuario</string>
    <string name="Crear">Crear</string>
    <string name="IniciarSesion">Iniciar Sesión</string>
    <string name="Entrar">Entrar</string>
    <string name="RegistrarNuevaCuenta">Registrar nueva cuenta</string>
    <string name="Introduce_tu_email_o_nombre">Introduce tu email o nombre</string>
    <string name="Registrar">Registrar</string>
    <string name="Productos">Productos</string>
    <string name="fab">fab</string>
    <string name="CifProveedor">Cif Proveedor</string>
    <string name="Precio">Precio</string>
    <string name="Cantidad">Cantidad</string>
    <string name="CodigoBarra">Código de Barra</string>
    <string name="Insertar">Insertar</string>
    <string name="AnyadirProductos">Añadir Productos</string>
    <string name="CodBarra">Cod. Barra:</string>
    <string name="Cantidad_">Cantidad:</string>
    <string name="Cif_">Cif:</string>
    <string name="EditarProducto">Editar Producto</string>
    <string name="Guardar">Guardar</string>
    <string name="Anyadir">Añadir</string>
    <string name="EntrarGoogle">Entrar con google</string>
    <string name="EntrarFacebook">Entrar con facebook</string>
</resources>