<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/cvProductos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:elevation="20dp"
        app:cardCornerRadius="20dp"
        app:cardUseCompatPadding="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvCifT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="7dp"
                android:text="@string/Cif_"
                app:layout_constraintBottom_toBottomOf="@+id/tvCifProveedor"
                app:layout_constraintEnd_toStartOf="@+id/tvCifProveedor" />

            <ImageView
                android:id="@+id/ivImagen"
                android:layout_width="118dp"
                android:layout_height="152dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/toy" />

            <TextView
                android:id="@+id/tvNombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/ivImagen"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Goma" />

            <TextView
                android:id="@+id/tvPrecio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/tvNombre"
                tools:text="2.50" />

            <TextView
                android:id="@+id/tvCodBarra"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="7dp"
                android:textColor="@color/black"
                app:layout_constraintStart_toEndOf="@+id/tvCodBarraT"
                app:layout_constraintTop_toTopOf="@+id/tvCodBarraT"
                tools:text="0001" />

            <TextView
                android:id="@+id/tvCodBarraT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/CodBarra"
                app:layout_constraintStart_toStartOf="@+id/tvNombre"
                app:layout_constraintTop_toBottomOf="@+id/tvNombre" />

            <TextView
                android:id="@+id/tvCantidadT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/Cantidad_"
                app:layout_constraintStart_toStartOf="@+id/tvNombre"
                app:layout_constraintTop_toBottomOf="@+id/tvCodBarraT" />

            <TextView
                android:id="@+id/tvCantidad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:textColor="#000000"
                app:layout_constraintStart_toStartOf="@+id/tvCodBarra"
                app:layout_constraintTop_toBottomOf="@+id/tvCodBarra"
                tools:text="23" />

            <TextView
                android:id="@+id/tvCifProveedor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:text="cif1" />

            <TextView
                android:id="@+id/tvEuro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:text="€"
                android:textColor="#000000"
                android:textSize="10sp"
                app:layout_constraintStart_toEndOf="@+id/tvPrecio"
                app:layout_constraintTop_toTopOf="@+id/tvPrecio" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>


